# ai-startup-simulator

./: Dorckerfile  README.md  agent.py  env.py  inference.py  infetence.py  metrics.py  server.py
server/: app.py  openenv.yaml  uv.lock# placeholder lock file
server/server/: pyproject.toml
