[project]
name = "ai-startup-simulator"
version = "1.0.0"
description = "AI Startup Simulation API"

dependencies = [
    "flask",
    "openai",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
